--- a/index.html
+++ b/index.html
@@ -134,28 +134,28 @@
             <div class="w-6/12 h-4/6 flex justify-start items-center flex-col drop-shadow-2xl shadow-2xl backdrop-blur-lg rounded-lg bg-[rgba(0,0,0,0.5)]">
                 <div class="w-full h-14 px-5 flex justify-between items-center">
                     <div class="text-2xl text-white font-bold drop-shadow-2xl shadow-2xl">Adicionar Obra</div>
-                    <i class="fa-solid fa-xmark py-1.5 px-2 border border-solid border-gray-900 rounded-full cursor-pointer transition-all hover:bg-red-500 hover:text-white"></i>
+                    <i class="fa-solid fa-xmark py-2 px-2.5 border border-solid border-white text-white rounded-full cursor-pointer transition-all hover:bg-red-500 hover:border-0"></i>
                 </div>
-                <div class="w-full h-5/6 flex justify-center items-center border border-solid border-gray-900">
-                    <div class="w-8/12 h-full flex justify-start items-center flex-col border border-solid border-gray-900">
+                <div class="w-full grow flex justify-center items-center">
+                    <div class="w-8/12 h-full flex justify-start items-center flex-col">
                         <div class="w-full h-20 flex justify-center items-start flex-col pl-7">
                             <label for="obra_title" class="ml-2 text-base text-white font-bold">Nome da Obra</label>
                             <input type="text" id="obra_title" name="obra_title" class="w-8/12 h-8 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] border border-solid border-gray-300">
                         </div>
-                        <div class="w-full h-1/6 flex justify-center items-center">
-                            <div class="w-4/12 h-full flex justify-evenly items-end flex-col border border-solid border-gray-900">
+                        <div class="w-full h-1/6 flex justify-center items-center ">
+                            <div class="w-4/12 h-full flex justify-center gap-y-1 items-center flex-col ">
                                 <label for="" class="mr-4 text-base text-white font-bold">Imagem de capa</label>
-                                <div class="mr-4 w-8/12 h-3/6 flex justify-center items-center rounded text-white font-bold border border-solid border-gray-300 cursor-pointer">
-                                    <div class="w-1/2 h-full flex justify-center items-center rounded-s bg-[rgba(255,255,255,0.5)]">Não</div>
-                                    <div class="w-1/2 h-full flex justify-center items-center rounded-e">Sim</div>
+                                <div class="mr-4 w-8/12 h-9 flex justify-center items-center rounded text-white font-bold border border-solid border-gray-300 cursor-pointer">
+                                    <div onclick="option_change(this)" data-option_num="0" class="w-1/2 h-full flex justify-center items-center rounded-s transition-all bg-[rgba(255,255,255,0.5)]">Não</div>
+                                    <div onclick="option_change(this)" data-option_num="1" class="w-1/2 h-full flex justify-center items-center rounded-e transition-all">Sim</div>
                                 </div>
                             </div>
-                            <div class="w-8/12 h-full py-0.5 flex justify-start items-end border border-solid border-gray-900">
-                                <input type="text" id="obra_title" name="obra_title" disabled class="w-9/12 h-8 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] disabled:opacity-50 border border-solid border-gray-300" placeholder="Link da Imagem">
+                            <div class="w-8/12 h-full py-0.5 flex justify-start items-end ">
+                                <input type="text" id="obra_title" name="obra_title" disabled class="w-9/12 h-9 mb-2.5 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] disabled:opacity-50 border border-solid border-gray-300" placeholder="Link da Imagem">
                             </div>
                         </div>
-                        <div class="w-full h-20 flex justify-center items-center">
-                            <div class="w-1/3 h-full flex justify-center items-center flex-col gap-y-0.5 border-2 border-solid border-gray-900">
+                        <div class="w-full h-1/6 flex justify-center items-center">
+                            <div class="w-1/3 h-full flex justify-center items-center flex-col gap-y-0.5">
                                 <label for="" class="text-base text-white font-bold">Gênero da obra</label>
                                 <select name="" id="" class="w-9/12 py-1.5 px-2 text-sm text-white rounded drop-shadow-2xl shadow-2xl backdrop-blur outline-none transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] disabled:opacity-50 border border-solid border-gray-300">
                                     <option value="-1" class="text-black font-bold">Selecione</option>
@@ -166,23 +166,35 @@
                                     <option value="4" class="text-black font-bold">5</option>
                                 </select>
                             </div>
-                            <div class="w-1/3 h-full flex justify-center items-center flex-col gap-y-0.5 border-2 border-solid border-gray-900">
+                            <div class="w-1/3 h-full flex justify-center items-center flex-col gap-y-0.5">
                                 <label for="" class="mr-20 text-base text-white font-bold">Tipo</label>
                                 <div class="w-8/12 h-9 flex justify-center items-center rounded text-white font-bold border border-solid border-gray-300 cursor-pointer">
-                                    <div class="w-1/2 h-full flex justify-center items-center rounded-s bg-[rgba(255,255,255,0.5)]">Filme</div>
-                                    <div class="w-1/2 h-full flex justify-center items-center rounded-e">Série</div>
+                                    <div onclick="option_change(this)" data-option_num="0" class="w-1/2 h-full flex justify-center items-center rounded-s transition-all bg-[rgba(255,255,255,0.5)]">Filme</div>
+                                    <div onclick="option_change(this)" data-option_num="1" class="w-1/2 h-full flex justify-center items-center rounded-e transition-all">Série</div>
                                 </div>
                             </div>
-                            <div class="w-1/3 h-full flex justify-center items-center flex-col gap-y-0.5 border-2 border-solid border-gray-900">
+                            <div class="w-1/3 h-full flex justify-center items-center flex-col gap-y-0.5">
                                 <label for="" class="text-base text-white font-bold">Assistido</label>
                                 <div class="w-8/12 h-9 flex justify-center items-center rounded text-white font-bold border border-solid border-gray-300 cursor-pointer">
-                                    <div class="w-1/2 h-full flex justify-center items-center rounded-s bg-[rgba(255,255,255,0.5)]">Não</div>
-                                    <div class="w-1/2 h-full flex justify-center items-center rounded-e">Sim</div>
+                                    <div onclick="option_change(this)" data-option_num="0" class="w-1/2 h-full flex justify-center items-center rounded-s transition-all bg-[rgba(255,255,255,0.5)]">Não</div>
+                                    <div onclick="option_change(this)" data-option_num="1" class="w-1/2 h-full flex justify-center items-center rounded-e transition-all">Sim</div>
                                 </div>
                             </div>
                         </div>
+                        <div class="w-full flex justify-start items-start flex-col pl-5 gap-y-1 grow">
+                            <label for="" class="ml-2 text-base text-white font-bold">Sinopse</label>
+                            <textarea name="" id="" class="w-9/12 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] border border-solid border-gray-300" cols="30" rows="10"></textarea>
+                        </div>
                     </div>
-                    <div class="w-4/12 h-full flex justify-center items-center flex-col border border-solid border-gray-900"></div>
+                    <div class="w-4/12 h-full flex justify-center items-center flex-col">
+                        <div class="w-full h-2/3 flex justify-center items-center">
+                            <div class="w-9/12 h-5/6 rounded-lg drop-shadow-2xl shadow-2xl bg-center bg-no-repeat bg-cover bg-[url(https://upload.wikimedia.org/wikipedia/pt/2/2f/6875.jpg)]"></div>
+                        </div>
+                        <div class="w-full h-1/3 flex justify-evenly items-end pb-3">
+                            <div class="w-5/12 h-9 flex justify-center items-center text-white font-bold rounded-sm cursor-pointer transition-all hover:bg-gray-400 hover:border-0 active:bg-gray-500 border border-solid border-gray-300">Salvar</div>
+                            <div class="w-5/12 h-9 flex justify-center items-center text-white font-bold rounded-sm cursor-pointer transition-all hover:bg-gray-400 hover:border-0 active:bg-gray-500 border border-solid border-gray-300">Cancelar</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
