--- a/genre.html
+++ b/genre.html
@@ -69,7 +69,7 @@
         <main class="w-full h-full flex justify-center items-center flex-col overflow-hidden z-0">
             <div class="w-full h-56 flex justify-center items-center">
                 <div class="w-1/3 h-full flex justify-center items-end">
-                    <div class="text-white font-bold text-2xl drop-shadow-2xl">Obras:</div>
+                    <div class="text-white font-bold text-2xl drop-shadow-2xl">Gêneros:</div>
                 </div>
                 <div class="w-1/3 h-full flex justify-center items-center"></div>
                 <div class="w-1/3 h-full flex justify-start items-end gap-x-2">
@@ -77,32 +77,60 @@
                         <i class="fa-solid fa-sliders"></i>
                         <div>Filtros</div>
                     </div>
-                    <div onclick="obra_insert(this)" data-insert="1" data-screen_num="1" class="py-1 px-5 flex justify-center items-center font-bold text-gray-300 rounded-lg border border-solid border-gray-300 cursor-pointer transition-all hover:shadow hover:bg-gray-300 hover:text-black hover:border-0">
-                        Adicionar Obra
+                    <div onclick="obra_insert(this)" data-screen_num="3" class="py-1 px-5 flex justify-center items-center font-bold text-gray-300 rounded-lg border border-solid border-gray-300 cursor-pointer transition-all hover:shadow hover:bg-gray-300 hover:text-black hover:border-0">
+                        Adicionar Gênero
                     </div>
                 </div>
             </div>
             <div class="w-full h-dvh flex justify-center items-start max-h-[80vh]">
                 <div id="elements_list" class="mt-1 p-4 gap-y-5 w-9/12 min-h-96 max-h-full flex justify-start items-start flex-wrap content-start overflow-auto rounded-lg border border-solid border-gray-300">
-                    <div onmouseenter="obra_enter(this)" onmouseleave="obra_leave(this)" class="flex justify-center items-center flex-col px-2 grow">
-                        <div data-bg="1" class="obra w-48 h-64 flex justify-center items-end cursor-pointer transition-all hover:-translate-y-1 drop-shadow-2xl bg-center bg-no-repeat bg-cover bg-[url(https://upload.wikimedia.org/wikipedia/pt/2/2f/6875.jpg)]">
-                            <div class="w-full h-0 px-2 flex justify-start items-start flex-col transition-all overflow-hidden text-white font-bold bg-zinc-800">
-                                <div class="w-full whitespace-nowrap overflow-hidden text-ellipsis">Bob Esponja</div>
-                                <div class="w-full flex justify-between items-center">
-                                    <div>(2023)</div>
-                                    <div>10/10</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="w-48 h-7 px-5 flex justify-end items-center -translate-y-1 rounded-b-lg bg-zinc-700 transition-all opacity-0">
-                            <div class="px-2 h-full cursor-pointer transition-all hover:text-blue-500 hover:bg-zinc-500 active:bg-zinc-400">
-                                <i class="fa-solid fa-pen"></i>
-                            </div>
-                            <div class="px-2 h-full cursor-pointer transition-all hover:text-red-500 hover:bg-zinc-500 active:bg-zinc-400">
-                                <i class="fa-solid fa-trash"></i>
-                            </div>
-                        </div>
-                    </div>
+                    <table class="w-full border-collapse">
+                        <thead class="h-9 bg-[rgba(255,255,255,0.8)]">
+                            <tr>
+                                <th class="w-1/12">ID</th>
+                                <th class="w-10/12">Nome</th>
+                                <th class="w-1/12"></th>
+                            </tr>
+                        </thead>
+                        <tbody class="font-bold">
+                            <tr class="h-8 cursor-pointer transition-all hover:bg-[rgba(255,255,255,0.7)] active:bg-[rgba(255,255,255,0.6)] bg-[rgba(255,255,255,0.4)]">
+                                <td class="w-1/12 text-center">1</td>
+                                <td class="w-10/12 text-center">Ficção Científica</td>
+                                <td class="w-1/12 text-center">
+                                    <div class="w-4/12 h-full cursor-pointer transition-all hover:text-red-500 hover:drop-shadow-2xl hover:shadow-2xl">
+                                        <i class="fa-solid fa-trash"></i>
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr class="h-8 cursor-pointer transition-all hover:bg-[rgba(255,255,255,0.7)] active:bg-[rgba(255,255,255,0.6)] bg-[rgba(255,255,255,0.5)]">
+                                <td class="w-1/12 text-center">2</td>
+                                <td class="w-10/12 text-center">Ficção Científica</td>
+                                <td class="w-1/12 text-center">
+                                    <div class="w-4/12 h-full cursor-pointer transition-all hover:text-red-500 hover:drop-shadow-2xl hover:shadow-2xl">
+                                        <i class="fa-solid fa-trash"></i>
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr class="h-8 cursor-pointer transition-all hover:bg-[rgba(255,255,255,0.7)] active:bg-[rgba(255,255,255,0.6)] bg-[rgba(255,255,255,0.4)]">
+                                <td class="w-1/12 text-center">1</td>
+                                <td class="w-10/12 text-center">Ficção Científica</td>
+                                <td class="w-1/12 text-center">
+                                    <div class="w-4/12 h-full cursor-pointer transition-all hover:text-red-500 hover:drop-shadow-2xl hover:shadow-2xl">
+                                        <i class="fa-solid fa-trash"></i>
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr class="h-8 cursor-pointer transition-all hover:bg-[rgba(255,255,255,0.7)] active:bg-[rgba(255,255,255,0.6)] bg-[rgba(255,255,255,0.5)]">
+                                <td class="w-1/12 text-center">2</td>
+                                <td class="w-10/12 text-center">Ficção Científica</td>
+                                <td class="w-1/12 text-center">
+                                    <div class="w-4/12 h-full cursor-pointer transition-all hover:text-red-500 hover:drop-shadow-2xl hover:shadow-2xl">
+                                        <i class="fa-solid fa-trash"></i>
+                                    </div>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </main>
@@ -218,7 +246,7 @@
         <div class="w-3/12 h-36 hidden justify-center items-center flex-col drop-shadow-2xl shadow-2xl backdrop-blur-lg rounded-lg bg-[rgba(0,0,0,0.5)]">
             <div class="w-full h-4/6 flex justify-evenly items-center flex-col px-5 break-all text-base text-white font-bold drop-shadow-2xl">
                 <label for="" class="self-start text-white text-lg font-bold">Adicionar Gênero</label>
-                <input type="text" class="w-9/12 h-9 mb-2.5 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] disabled:opacity-50 border border-solid border-gray-300" placeholder="Nome do gênero">
+                <input type="text" class="w-10/12 h-9 mb-2.5 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] disabled:opacity-50 border border-solid border-gray-300" placeholder="Nome do gênero">
             </div>
             <div class="w-full h-2/6 flex justify-evenly items-center">
                 <div onclick="genre_submit(this)" id="genre_cancel" data-submit="0" class="w-4/12 h-9 flex justify-center items-center text-white font-bold rounded-sm drop-shadow-2xl shadow-2xl cursor-pointer transition-all hover:bg-gray-400 hover:border-0 active:bg-gray-500 border border-solid border-gray-300">Cancelar</div>
